<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dmitry.calculator.MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="102dp"
            android:layout_weight="2"

            android:singleLine="true"
            android:cursorVisible="false"
            android:ems="10"
            android:focusable="false"
            android:gravity="bottom|end"
            android:inputType="textPersonName"
            android:longClickable="false"
            android:textSize="36sp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2">


            <Button
                android:id="@+id/resetButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="24"
                android:background="@drawable/buttom_style_two"
                android:text="@string/reset"
                android:textAllCaps="false"
                android:textSize="18sp" />

            <Button
                android:id="@+id/delButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/buttom_style_two"
                android:text="@string/del"
                android:textAllCaps="false"
                android:textSize="18sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <Button
                android:id="@+id/sevenButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/buttom_style_one"
                android:text="@string/seven"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/eightButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/buttom_style_one"
                android:text="@string/eight"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/nineButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/buttom_style_one"
                android:text="@string/nine"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/divButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/buttom_style_two"
                android:text="@string/dev"
                android:textAllCaps="false" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <Button
                android:id="@+id/fourButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/buttom_style_one"
                android:text="@string/four"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/fiveButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/buttom_style_one"
                android:text="@string/five"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/sixButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/buttom_style_one"
                android:text="@string/six"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/mulButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/buttom_style_two"
                android:text="@string/mul"
                android:textAllCaps="false" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <Button
                android:id="@+id/oneButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/buttom_style_one"
                android:text="@string/one"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/twoButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/buttom_style_one"
                android:text="@string/two"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/thereButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/buttom_style_one"
                android:text="@string/there"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/subButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/buttom_style_two"
                android:text="@string/sub"
                android:textAllCaps="false" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <Button
                android:id="@+id/dotButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/buttom_style_one"
                android:text="@string/dot"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/zeroButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/buttom_style_one"
                android:text="@string/zero"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/equalButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/buttom_style_one"
                android:text="@string/equal"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/plusButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/buttom_style_two"
                android:text="@string/plus"
                android:textAllCaps="false" />
        </TableRow>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>